--- a/Edu.html
+++ b/Edu.html
@@ -20,7 +20,7 @@
             <a href="index.html">Home  \</a>
             <a href="./desc.html">My tech journey  \</a>  
             <a href="./Edu.html">Educational background  \</a>  
-            <a href="./contact.html">Contact</a>
+            <a href="./Contact.html">Contact</a>
     
         </nav>
     </section>
